# clawscode

./: .example.env  .gitignore  AGENTS.md  README.md  pyproject.toml
src/: api_client.py  cli.py  commands.py  compact.py  config.py  context.py  permissions.py  query.py  query_engine.py  repl.py  state.py  tool.py
src/agents/: __init__.py  agent_definition.py  builder.py  coordinator.py  display.py  loader.py  memory.py  swarm.py
src/boot/: __init__.py  client.py  config.py  hooks.py  paths.py  state.py
src/hooks/: __init__.py  agent_hook.py  async_registry.py  config.py  executor.py  http_hook.py  prompt_hook.py  registry.py  types.py
src/plugins/: __init__.py  load_agents.py  load_commands.py  load_hooks.py  load_skills.py  loader.py  manager.py  registry.py  types.py  validator.py
src/query_loop/: __init__.py  engine.py  state.py
src/services/: agent_context.py  agent_mcp.py  background_tasks.py  bash_ast.py  bash_classifier.py  bash_registry.py  bridge.py  browser.py  cache_params.py  claude_md.py  compact_engine.py  content_replacement.py  context_analysis.py  context_collapse.py  context_provider.py  cost_tracker.py  cron_scheduler.py  dangerous_patterns.py  denial_tracker.py  fallback_model.py  file_history.py  file_read_cache.py  file_state_cache.py  forked_agent.py  history_snip.py  kairos.py  mcp_client.py  mcp_output_storage.py  memory.py  message_normalizer.py  message_pipeline.py  message_tombstone.py  message_uuid.py  path_validator.py  permission_persistence.py  prompt_builder.py  remote.py  sandbox.py  session_restore.py  session_state.py  (+9 more)
(+88 files in other folders)
