[project]
name = "clawscode"
version = "0.1.0"
description = "AI 编程助手 CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "openai>=1.30",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "websockets>=12.0",
    "asyncssh>=2.14",
]

[project.scripts]
clawscode = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
